--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 
 
   <main class="main">
+      <div class="navbarmain">
+         <ul class="menu" id="menu">
+          <li><a href="paginas/quienes-somos.html">Quienes somos</a></li>
+          <li><a href="paginas/servicios.html">Servicios</a></li>
+          <li><a href="paginas/portfolio.html">Productos</a></li>
+          <li><a href="paginas/contacto.html">Contactanos</a></li>
+         </ul>
+      </div>
     <div class="info">
       <img src="imagenes/jocu.png">
       <p>Somos Jocu, un estudio interesado en darle realidad a tu proyectos a travez del diseño.</p>
