--- a/paginas/portfolio.html
+++ b/paginas/portfolio.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="..//css/estilo.css">
+	<link rel="stylesheet" href="..//css/styles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/mediaQueries.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 	<title>Portfolio</title>
 </head>
 <body>
 	<header class="header">
-		<nav class="header__nav"> 
-			<a href="..//index.html"><img src="..//imagenes/joculog.png"></a>
-			<ul class="header__nav__ul">
-				<li class="header__nav__li"><a href="..//paginas/quienes-somos.html">Quienes somos</a></li>
-				<li class="header__nav__li"><a href="..//paginas/servicios.html">Servicios</a></li>
-				<li class="header__nav__li"><a href="..//paginas/portfolio.html">Portfolio</a></li>
-				<li class="header__nav__li"><a href="..//paginas/contacto.html">Contactanos</a></li>
-			</ul>
-		</nav>
-	</header>
-
-	<div class="portfolio__titulo">
-		<h1>Portfolio</h1>
-	</div>
-
-	<div class="portfolio__texto">
-		<p>Hace click y descubri todos los proyectos que ya realizamos.</p>
-	</div>
+	    <nav class="navbar">
+	      <a class="bothome" href="..//index.html"><img src="..//imagenes/joculog.png" class="logo"></a>
+	      <ul class="menu" id="menu">
+	        <li><a href="..//paginas/quienes-somos.html">Quienes somos</a></li>
+	        <li><a href="..//paginas/servicios.html">Servicios</a></li>
+	        <li><a href="..//paginas/portfolio.html">Productos</a></li>
+	        <li><a href="..//paginas/contacto.html">Contactanos</a></li>
+	      </ul>
+	      <img src="..//imagenes/menu.png" class="logomenu">
+	    </nav>
+	 </header>
 
 	
-	<div class="portfolio__nav">
+	 <div class="portfoliomain">
+		<div class="portfolio__titulo">
+			<h1>Portfolio</h1>
+		</div>
+
+		<div class="portfolio__texto">
+			<p>Hace click y descubri todos los proyectos que ya realizamos.</p>
+		</div>
+
 		<div class="portfolio__navstand">
 			<div class="portfolio__nombre">
 				<h2>Diseño de Stands</h2>
@@ -88,14 +92,16 @@
 
 	
 
-	<footer class="footer">
-		<nav class="footer__nav">
-			<a href="..//index.html"><img src="..//imagenes/joculog.png"></a>
-			<ul class="footer__nav__ul">
-				<li class="footer__nav__li"><a href="https://www.instagram.com/cord.di/">JOCU.DI</a></li>
-				<li class="footer__nav__li">+54 9 1153242483</li>
-			</ul>
-		</nav>	
-	</footer>	
+	<div class="footer">
+	    <div class="numero">
+	      	<h3>+5491153242483</h3>
+	    </div> 
+	    	<h2>JOCU DESIGN</h2>
+	    <div class="social-network">
+	      	<i class="fab fa-twitter"></i>
+	      	<i class="fab fa-facebook-f"></i>
+	      	<i class="fab fa-instagram"></i>
+	    </div>
+  	</div>	
 </body>
 </html>
