--- a/paginas/portfolio.html
+++ b/paginas/portfolio.html
@@ -17,15 +17,28 @@
 	<header class="header">
 	    <nav class="navbar">
 	      <a class="bothome" href="..//index.html"><img src="..//imagenes/joculog.png" class="logo"></a>
-	      <ul class="menu" id="menu">
-	        <li><a href="..//paginas/quienes-somos.html">Quienes somos</a></li>
+	        <ul class="menu" id="menu">
+	          <li><a  href="..//paginas/quienes-somos.html">Quienes somos</a></li>
+	          <li><a href="..//paginas/servicios.html">Servicios</a></li>
+	          <li><a href="..//paginas/portfolio.html">Productos</a></li>
+	          <li><a href="..//paginas/contacto.html">Contactanos</a></li>
+	        </ul>
+	    </nav>
+	</header>
+
+	  <div class="respmenu">
+	    <input type="checkbox">
+	    <i class="fas fa-bars"></i>
+	    <i class="fas fa-times"></i>
+	    <nav>
+	      <ul>
+	        <li><a  href="..//paginas/quienes-somos.html">Quienes somos</a></li>
 	        <li><a href="..//paginas/servicios.html">Servicios</a></li>
 	        <li><a href="..//paginas/portfolio.html">Productos</a></li>
 	        <li><a href="..//paginas/contacto.html">Contactanos</a></li>
 	      </ul>
-	      <img src="..//imagenes/menu.png" class="logomenu">
 	    </nav>
-	 </header>
+	  </div>
 
 	
 	 <div class="portfoliomain">
