--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -11,25 +11,39 @@
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/mediaQueries.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<title>Quienes somos</title>
 </head>
 <body>
-	  <header class="header">
-	    <nav class="navbar">
-	      <a class="bothome" href="..//index.html"><img src="..//imagenes/joculog.png" class="logo"></a>
-	      <ul class="menu" id="menu">
-	        <li><a href="..//paginas/quienes-somos.html">Quienes somos</a></li>
-	        <li><a href="..//paginas/servicios.html">Servicios</a></li>
-	        <li><a href="..//paginas/portfolio.html">Productos</a></li>
-	        <li><a href="..//paginas/contacto.html">Contactanos</a></li>
-	      </ul>
-	      <img src="..//imagenes/menu.png" class="logomenu">
-	    </nav>
-	  </header>
+	 <header class="header">
+    <nav class="navbar">
+      <a class="bothome" href="..//index.html"><img src="..//imagenes/joculog.png" class="logo"></a>
+        <ul class="menu" id="menu">
+          <li><a  href="..//paginas/quienes-somos.html">Quienes somos</a></li>
+          <li><a href="..//paginas/servicios.html">Servicios</a></li>
+          <li><a href="..//paginas/portfolio.html">Productos</a></li>
+          <li><a href="..//paginas/contacto.html">Contactanos</a></li>
+        </ul>
+    </nav>
+  </header>
+
+  <div class="respmenu">
+    <input type="checkbox">
+    <i class="fas fa-bars"></i>
+    <i class="fas fa-times"></i>
+    <nav>
+      <ul>
+        <li><a  href="..//paginas/quienes-somos.html">Quienes somos</a></li>
+        <li><a href="..//paginas/servicios.html">Servicios</a></li>
+        <li><a href="..//paginas/portfolio.html">Productos</a></li>
+        <li><a href="..//paginas/contacto.html">Contactanos</a></li>
+      </ul>
+    </nav>
+  </div>
 	
 	<div class="quienessomos">
 		<div class="quienessomos__titulo">
-			<h1>Quienes somos</h1>
+			<h1 >Quienes somos</h1>
 		</div>
 
 		<div class="quienessomos__texto">
@@ -44,7 +58,7 @@
 
 		<div class="quienessomos__profilecontainer1">
 			<div class="quienessomos__profileimg">
-				<img src="..//imagenes/jjj.jpg">
+				<img class="animate__animated animate__backInLeft" src="..//imagenes/jjj.jpg">
 			</div>
 			<div class="quienessomos__profiletext">
 				<h2>Juan Cruz Ottonelli</h2>
@@ -58,7 +72,7 @@
 
 		<div class="quienessomos__profilecontainer2">
 			<div class="quienessomos__profileimg">
-				<img src="..//imagenes/jjj.jpg">
+				<img class="animate__animated animate__backInLeft" src="..//imagenes/jjj.jpg">
 			</div>
 			<div class="quienessomos__profiletext">
 				<h2 >Octavio Cordeyro Equiza</h2>
