--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -11,21 +11,35 @@
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/mediaQueries.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<title>Contacto</title>
 </head>
 <body>
-	 <header class="header">
+	<header class="header">
 	    <nav class="navbar">
 	      <a class="bothome" href="..//index.html"><img src="..//imagenes/joculog.png" class="logo"></a>
-	      <ul class="menu" id="menu">
-	        <li><a href="..//paginas/quienes-somos.html">Quienes somos</a></li>
+	        <ul class="menu" id="menu">
+	          <li><a  href="..//paginas/quienes-somos.html">Quienes somos</a></li>
+	          <li><a href="..//paginas/servicios.html">Servicios</a></li>
+	          <li><a href="..//paginas/portfolio.html">Productos</a></li>
+	          <li><a href="..//paginas/contacto.html">Contactanos</a></li>
+	        </ul>
+	    </nav>
+  	</header>
+
+  	<div class="respmenu">
+	    <input type="checkbox">
+	    <i class="fas fa-bars"></i>
+	    <i class="fas fa-times"></i>
+	    <nav>
+	      <ul>
+	        <li><a  href="..//paginas/quienes-somos.html">Quienes somos</a></li>
 	        <li><a href="..//paginas/servicios.html">Servicios</a></li>
 	        <li><a href="..//paginas/portfolio.html">Productos</a></li>
 	        <li><a href="..//paginas/contacto.html">Contactanos</a></li>
 	      </ul>
-	      <img src="..//imagenes/menu.png" class="logomenu">
 	    </nav>
-	 </header>
+  	</div>
 
 
 	 <div class="contactomain">
@@ -36,7 +50,7 @@
 		<div class="contacto__formulario">
 			<form class="contacto__form">
 				<div class="contacto__formimg">
-					<img src="..//imagenes/joculog.png" width="400px">
+					<img class="animate__animated animate__fadeIn" src="..//imagenes/joculog.png" width="400px">
 				</div>
 				<div class="contacto__formtexto">
 					<div class="contacto__forminput">
