--- a/paginas/portfolio.html
+++ b/paginas/portfolio.html
@@ -107,13 +107,13 @@
 			  </div>
 			 	<div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+				      <img src="..//imagenes/RENDERENCENDEDOR.854.jpg" class="d-block w-100">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+				      <img src="..//imagenes/RENDERENCENDEDOR.854.jpg" class="d-block w-100">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+				      <img src="..//imagenes/RENDERENCENDEDOR.854.jpg" class="d-block w-100">
 				    </div>
 			  </div>
 				  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -146,13 +146,13 @@
 				</div>
 				<div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+				      <img src="..//imagenes/F7.jpg" class="d-block w-100">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+				      <img src="..//imagenes/F7.jpg" class="d-block w-100">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+				      <img src="..//imagenes/F7.jpg" class="d-block w-100">
 				    </div>
 				</div>
 				  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -177,7 +177,7 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur.</p>
 			</div>
-			<div id="carouselExampleIndicators" class="carousel slide mx-auto" data-bs-ride="carousel">
+			<div id="carouselExampleIndicators" class="carousel slideRENDERENCENDEDOR.854.jpg mx-auto" data-bs-ride="carousel">
 				<div class="carousel-indicators">
 				    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 				    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -185,13 +185,13 @@
 				</div>
 				<div class="carousel-inner">
 				    <div class="carousel-item active">
-				      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+				      <img src="..//imagenes/Screenshot1.jpg" class="d-block w-100">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+				      <img src="..//imagenes/Screenshot1.jpg" class="d-block w-100">
 				    </div>
 				    <div class="carousel-item">
-				      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+				      <img src="..//imagenes/Screenshot1.jpg" class="d-block w-100">
 				    </div>
 				</div>
 					  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
