ajustes responsive boot

--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -28,7 +28,7 @@
 	            </button>
 	            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 	              <div class="navbar-nav">
-	                <a class="nav-link active" aria-current="page" href="..//paginas/quienes-somos.html">Quienes somos</a>
+	                <a class="nav-link" href="..//paginas/quienes-somos.html">Quienes somos</a>
 	                <a class="nav-link" href="..//paginas/servicios.html">Servicios</a>
 	                <a class="nav-link" href="..//paginas/portfolio.html">Portfolio</a>
 	                <a class="nav-link" href="..//paginas/contacto.html">Contacto</a>
@@ -40,7 +40,7 @@
 	    </div>  
 
 	    <div class="row justify-content-center text-center">
-			<div class="serviciosmain col-8">
+			<div class="serviciosmain  col-lg-8 col-sm-10">
 				<h1 class="servicios__titulo">Servicios</h1>
 
 				<div class="servicios__texto">
