--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -42,7 +42,7 @@
 
 
 	<div class="row justify-content-center">
-	 <div class="contactomain col-6 justify-content-center">
+	 <div class="contactomain col-lg-8 col-sm-10 justify-content-center">
 		<div class="contacto__titulo text-center">
 			<h1>Contactanos</h1>
 		</div>
@@ -73,13 +73,14 @@
 		</div>
 	</div>
 
-	<div class="row">
-
-		<div class="contacto__ubicacion col-6">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1642.4481914562027!2d-58.41638104184627!3d-34.5814882951163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb578cfe06087%3A0x77fe81d1d5469542!2sAv.%20Gral.%20Las%20Heras%203999%2C%20C1425%20ATD%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1645647076002!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+	<div class="row justify-content-center">
+		<div class="contacto__ubicacion col-8">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1642.4481914562027!2d-58.41638104184627!3d-34.5814882951163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb578cfe06087%3A0x77fe81d1d5469542!2sAv.%20Gral.%20Las%20Heras%203999%2C%20C1425%20ATD%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1645647076002!5m2!1ses!2sar" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 		</div>
+	</div>
 
-		<div class="direcciones col-6 text-center justify-content-center">
+	<div class="row justify-content-center">
+		<div class="direcciones col-6 text-center">
 			<div  class="contacto__direccion">
 				<h3>Dirección Av. Las Heras 3999</h3>
 			</div>
@@ -88,8 +89,6 @@
 				<h4>+54 9 1153242483</h4>
 			</div>
 		</div>
-
-		
 	</div>
 	
 
