--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -40,15 +40,15 @@
       </header>
     </div>  
 
-		<div class="row">
-			<div class="quienessomos text-center">
+		<div class="row text-center justify-content-center">
+			<div class="quienessomos col-lg-8 col-sm-10">
 				<div class="quienessomos__titulo blockquote">
-					<h1 class="">Quienes somos</h1>
+					<h1>Quienes somos</h1>
 				</div>
 		</div>
 
 		<div class="row justify-content-center">
-			<div class="quienessomos__texto text-center col-8">
+			<div class="quienessomos__texto text-center col-lg-8 col-sm-10">
 				<p class="blockquote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -60,9 +60,9 @@
 		</div>
 
 		<div class="row justify-content-center">
-			<div class="quienessomos__profilecontainer1 col-8">
+			<div class="quienessomos__profilecontainer1 col-lg-8 col-sm-10">
 				<div class="quienessomos__profileimg text-center">
-					<img class="animate__animated animate__backInLeft" width="350px" src="..//imagenes/jjj.jpg">
+					<img class="animate__animated animate__backInLeft" width="250px" src="..//imagenes/jjj.jpg">
 				</div>
 				<div class="quienessomos__profiletext text-center">
 					<h2>Juan Cruz Ottonelli</h2>
@@ -76,9 +76,9 @@
 		</div>
 
 		<div class="row justify-content-center">
-			<div class="quienessomos__profilecontainer2 col-8">
+			<div class="quienessomos__profilecontainer2 col-lg-8 col-sm-10">
 				<div class="quienessomos__profileimg text-center">
-					<img class="animate__animated animate__backInLeft" width="350px" src="..//imagenes/jjj.jpg">
+					<img class="animate__animated animate__backInLeft" width="250px" src="..//imagenes/jjj.jpg">
 				</div>
 				<div class="quienessomos__profiletext text-center">
 					<h2 >Octavio Cordeyro Equiza</h2>
