centrado pagina portfolio

--- a/paginas/portfolio.html
+++ b/paginas/portfolio.html
@@ -46,7 +46,7 @@
 		</div>
 
 	<div class="row">
-		<div class="portfolio__navstand m-3">
+		<div class="portfolio__navstand m-3 m-auto">
 			<div class="portfolio__nombre m-3">
 				<h2>Diseño de Stands</h2>
 			</div>
@@ -89,7 +89,7 @@
 	</div>
 
 	<div class="row">
-		<div class="portfolio__navproductos m-3">
+		<div class="portfolio__navproductos m-3 m-auto">
 			<div class="portfolio__nombre m-3">
 				<h2>Diseño de Productos</h2>
 			</div>
@@ -131,7 +131,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="portfolio__navinteriores m-3">
+		<div class="portfolio__navinteriores m-3 m-auto">
 			<div class="portfolio__nombre m-3">
 				<h2>Diseño de Interiores</h2>
 			</div>
@@ -174,7 +174,7 @@
 	</div>
 
 	<div class="row">
-			<div class="portfolio__navgrafico m-3">
+			<div class="portfolio__navgrafico m-3 m-auto">
 				<div class="portfolio__nombre m-3">
 					<h2>Diseño Gráfico</h2>
 				</div>
