--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/estilos.css">
   <link rel="stylesheet" href="css/mediaQueries.css">
+  <meta name="description" content="Sitio web de Jocu Design. Estudio de diseño integral">
+  <meta name="keywords" content="diseño, modelado 3d, stands, grafico, interiores, publcidad, productos, portfolio, renders, estudio de diseño">
 </head>
 <body>
 
